fix: Use autogenerated server boilerplate
Use oapi autogenerated server boilerplate instead of rolling my own.

Note, this boilerplate does not perform complete input validation, per
the openapi spec definitions. Will close this in another commit.
