# internal/controllers/deployment_service.go
@@ -7,13 +7,17 @@ import (
 	"github.com/ansonallard/deployment-service/internal/api"
 	"github.com/ansonallard/deployment-service/internal/model"
 	"github.com/ansonallard/deployment-service/internal/service"
-	"github.com/ansonallard/go_utils/openapi/request"
 )
 
 type DeploymentServiceController interface {
-	CreateService(ctx context.Context, request request.Request) (*api.CreateServiceResponse, error)
-	GetService(ctx context.Context, request request.Request) (*api.GetServiceResponse, error)
-	ListServices(ctx context.Context, request request.Request) (*api.ListServicesResponse, error)
+	// (GET /services)
+	ListServices(ctx context.Context, request api.ListServicesRequestObject) (api.ListServicesResponseObject, error)
+
+	// (POST /services)
+	CreateService(ctx context.Context, request api.CreateServiceRequestObject) (api.CreateServiceResponseObject, error)
+
+	// (GET /services/{name})
+	GetService(ctx context.Context, request api.GetServiceRequestObject) (api.GetServiceResponseObject, error)
 }
 
 type DeploymentServiceControllerConfig struct {
@@ -33,32 +37,25 @@ func NewDeploymentServiceController(config DeploymentServiceControllerConfig) (D
 	}, nil
 }
 
-func (ds *deploymentServiceController) CreateService(ctx context.Context, request request.Request) (*api.CreateServiceResponse, error) {
+func (ds *deploymentServiceController) CreateService(ctx context.Context, request api.CreateServiceRequestObject) (api.CreateServiceResponseObject, error) {
 	service := new(model.Service)
-	if err := service.FromCreateRequest(request); err != nil {
+	if err := service.FromCreateRequest(request.Body); err != nil {
 		return nil, err
 	}
-
 	if err := ds.service.Create(ctx, service); err != nil {
 		return nil, err
 	}
-
 	serviceDto := new(api.Service)
 	if err := service.ToExternal(serviceDto); err != nil {
 		return nil, err
 	}
-	return &api.CreateServiceResponse{
+	return api.CreateService200JSONResponse{
 		Service: *serviceDto,
 	}, nil
 }
 
-func (ds *deploymentServiceController) GetService(ctx context.Context, request request.Request) (*api.GetServiceResponse, error) {
-	service := new(model.Service)
-	if err := service.FromGetRequest(request); err != nil {
-		return nil, err
-	}
-
-	service, err := ds.service.Get(ctx, service.Name.Name)
+func (ds *deploymentServiceController) GetService(ctx context.Context, request api.GetServiceRequestObject) (api.GetServiceResponseObject, error) {
+	service, err := ds.service.Get(ctx, request.Name)
 	if err != nil {
 		return nil, err
 	}
@@ -67,16 +64,13 @@ func (ds *deploymentServiceController) GetService(ctx context.Context, request r
 	if err := service.ToExternal(serviceDto); err != nil {
 		return nil, err
 	}
-	return &api.GetServiceResponse{
+	return api.GetService200JSONResponse{
 		Service: *serviceDto,
 	}, nil
 }
 
-func (ds *deploymentServiceController) ListServices(ctx context.Context, request request.Request) (*api.ListServicesResponse, error) {
-	maxResults, nextToken, err := model.FromListRequest(request)
-	if err != nil {
-		return nil, err
-	}
+func (ds *deploymentServiceController) ListServices(ctx context.Context, request api.ListServicesRequestObject) (api.ListServicesResponseObject, error) {
+	maxResults, nextToken := model.FromListRequest(request.Params)
 
 	services, err := ds.service.List(ctx, maxResults, nextToken)
 	if err != nil {
@@ -93,7 +87,8 @@ func (ds *deploymentServiceController) ListServices(ctx context.Context, request
 		servicesDto = append(servicesDto, *serviceDto)
 	}
 
-	return &api.ListServicesResponse{
-		Services: servicesDto,
+	return api.ListServices200JSONResponse{
+		Services:  servicesDto,
+		NextToken: nil,
 	}, nil
 }
